Fixed Splash GPS image spacing issue

--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -127,14 +127,12 @@ header .gps-image {
 }
 
 header .intro-text{
-    /*margin-top:475px;*/
-    margin-top: 0px;
-    margin-left: 00px;
+
     padding: 15px;
     color:#fff;
     background:rgba(42,68,80,0.8);
     border-radius: 20px;
-    width: 920px;
+    width: 800px;
 }
 
 header .intro-text .name {
@@ -158,7 +156,7 @@ header .intro-text .skills {
     }
 
     header .intro-text .name {
-        font-size: 5em;
+        font-size: 4.6em;
     }
 
     header .intro-text .skills {
